--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "stream-chain": "2.2.5",
     "stream-fork": "1.0.5",
     "stream-json": "1.8.0"
+  },
+  "devDependencies": {
+    "prettier": "3.0.3"
   }
 }
